category carousel overlapping issue fixed

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -46,6 +46,7 @@
     transform: scale(1.2);
     max-width: 500px;
     max-height: 500px;
+    position: relative;
 }
 
 .shadow-overlay
